# dashboard-matrix

./: .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README-PATCH.md  README.md  RELEASE_MANIFEST.txt  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  VALIDATION.md  dashboard-matrix.spec  docker-compose.yml  matrix.py  pyproject.toml  requirements-optional.txt  requirements.txt
app/: auth.py  catalog.py  database.py  layout_exports.py  layout_imports.py  main.py  map_adapter.py  marketplace.py  models.py  nws_radar.py  paths.py  plugin_manager.py  plugin_worker.py  proxy.py  proxy_diagnostics.py  screenshots.py  script_runner.py  setup.py  starter_templates.py  themes.py  updates.py  version.py  websocket.py
docs/: ADMINISTRATION.md  BETA_TESTING.md  EXCHANGE_REPOSITORY.md  HAMQSL_DATA.md  LAYOUT_SHARING.md  MAP_PROFILES.md  MAP_PROVIDER_SDK.md  MARKETPLACE.md  NOAA_NATIVE_TILES.md  PLUGIN_SDK.md  PLUGIN_SECURITY.md  STATION_INTEGRATIONS.md  THEME_SDK.md
exchange-repo-template/: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.json
scripts/: build-raspberry-pi-image.sh  build-windows.ps1  export-layout.py  install-raspberry-pi.sh  install-windows.ps1  install.sh  kiosk.sh  wsjtx_listener.py
systemd/: dashboard-matrix-wsjtx-listener.service  dashboard-matrix.service
tests/: conftest.py  test_admin_tabs.py  test_app.py  test_dxcluster_proxy.py  test_layout_exports.py  test_layout_imports.py  test_map_profiles.py  test_nws_radar.py  test_plugin_security.py  test_setup_templates.py  test_updates.py
user_scripts/: ham_bands.py  ham_common.py  ham_prop.py  (+2 more)
(+55 files in other folders)
