[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kq4dlb-dashboard-matrix"
version = "0.1.0b1"
description = "Extensible self-hosted dashboard with controlled iframe proxying, plugins, scripts, maps, and shareable layouts"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Marc Smith (KQ4DLB)"}]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "jinja2>=3.1,<4.0",
  "pydantic>=2.8,<3.0",
  "httpx>=0.27,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "itsdangerous>=2.2,<3.0",
  "packaging>=24,<27",
]

[project.optional-dependencies]
station = ["paho-mqtt>=2.1,<3.0", "meshtastic>=2.5,<3.0", "pyserial>=3.5,<4.0"]
test = ["pytest>=8,<9"]
screenshots = ["playwright>=1.50,<2.0"]
windows = ["pyinstaller>=6.10,<7.0"]

[project.scripts]
dashboard-matrix = "matrix:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools]
py-modules = ["matrix"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*", "plugins", "themes", "user_scripts"]

[tool.setuptools.package-data]
app = ["templates/*.html", "static/**/*"]
plugins = ["**/*"]
themes = ["**/*"]
user_scripts = ["*.py"]
